# Datacenter-Cooling-AI

./: Dockerfile  Readme.md  inference.py  openenv.yaml  pyproject.toml
server/: app.py
