[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-datacenter-cooling"
version = "0.1.0"
description = "OpenEnv simulation for Smart Data Center Cooling System"
authors = [
    {name = "Tensor Tacos"}
]
dependencies = [
    "openai",
    "requests"
]
