[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-datacenter-cooling"
version = "0.1.0"
description = "OpenEnv simulation for Smart Data Center Cooling System"
authors = [
    {name = "Tensor Tacos"}
]
readme = "Readme.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]
